--- a/style.css
+++ b/style.css
@@ -1,8 +1,54 @@
-.form-popup {
-  display: none;
-  position: fixed;
-  bottom: 0;
-  right: 15px;
-  border: 3px solid #f1f1f1;
-  z-index: 9;
+dialog {
+  width: max-content;
+  padding: 20px;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+
+
+dialog[open] {
+  opacity: 1;
+  transform: scaleY(1);
+}
+
+dialog {
+  opacity: 0;
+  transform: scaleY(0);
+  transition:
+    opacity 0.7s ease-out,
+    transform 0.7s ease-out,
+    overlay 0.7s ease-out allow-discrete,
+    display 0.7s ease-out allow-discrete;
+}
+
+@starting-style {
+  dialog[open] {
+    opacity: 0;
+    transform: scaleY(0);
+  }
+}
+
+dialog::backdrop {
+  background-image: url("images/library.jpg");
+  background-position: center;
+  opacity: 0;
+  transition:
+   opacity 0.7s ease-out;
+}
+
+dialog[open]::backdrop {
+  background-image: url("images/library.jpg");
+  background-position: center;
+  opacity: 0.75;
+}
+
+@starting-style {
+  dialog[open]::backdrop {
+    opacity: 0;
+  }
 }
