--- a/style.css
+++ b/style.css
@@ -1,3 +1,38 @@
+
+
+body,
+html {
+  padding: 0px;
+  border: 0px;
+  margin: 0px;
+}
+
+body {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.header {
+  /* background-color: red; */
+  height: 15vh;
+  border-bottom: black solid 1px;
+}
+
+.main {
+  /* background-color: blue; */
+  height: 100%;
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+}
+
+h1 {
+  margin: 0px;
+  text-align: center;
+  line-height: 15vh;
+}
+
 dialog {
   width: max-content;
   padding: 20px;
@@ -8,8 +43,6 @@ form {
   flex-direction: column;
   justify-content: space-between;
 }
-
-
 
 dialog[open] {
   opacity: 1;
@@ -44,11 +77,66 @@ dialog::backdrop {
 dialog[open]::backdrop {
   background-image: url("images/library.jpg");
   background-position: center;
-  opacity: 0.75;
+  opacity: 1;
 }
 
 @starting-style {
   dialog[open]::backdrop {
     opacity: 0;
   }
+}
+
+button {
+  border: black solid 1px;
+  background: white;
+  width: 100px;
+  height: 50px;
+  font-size: 1.2rem;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.openForm {
+  margin-bottom: 30px;
+}
+
+.table {
+  background-image: url("images/bookshelf.jpg");
+  background-size: cover;
+  background-position: center;
+}
+
+table {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10vh;
+  text-align: center;
+  background-color: white;
+  box-shadow: 0px 5px 5px grey;
+  padding: 10px;
+}
+
+th {
+  width: 150px;
+  border-bottom: 2px solid black;
+}
+
+
+.sidebar {
+  padding: 50px;
+  border-right: black solid 1px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+
+label {
+  margin-right: 10px;
+}
+
+.nowrap {
+  white-space: nowrap;
+  margin-bottom: 10px;
+  display: flex;
+  justify-content: space-between;
 }
