--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ html {
   padding: 0px;
   border: 0px;
   margin: 0px;
+  font-family: Helvetica, sans-serif;
 }
 
 body {
@@ -15,13 +16,12 @@ body {
 }
 
 .header {
-  /* background-color: red; */
   height: 15vh;
-  border-bottom: black solid 1px;
+  box-shadow: 10px 0px 10px black;
+  z-index: 1;
 }
 
 .main {
-  /* background-color: blue; */
   height: 100%;
   display: grid;
   grid-template-columns: 1fr 4fr;
@@ -31,6 +31,7 @@ h1 {
   margin: 0px;
   text-align: center;
   line-height: 15vh;
+  font-size: 3rem;
 }
 
 dialog {
@@ -87,12 +88,13 @@ dialog[open]::backdrop {
 }
 
 button {
-  border: black solid 1px;
+  border: none;
   background: white;
   width: 100px;
   height: 50px;
+  border-radius: 25px;
   font-size: 1.2rem;
-  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  box-shadow: 0px 5px 5px grey;
 }
 
 .openForm {
@@ -100,9 +102,10 @@ button {
 }
 
 .table {
-  background-image: url("images/bookshelf.jpg");
+  /* background-image: url("images/bookshelf.jpg");
   background-size: cover;
-  background-position: center;
+  background-position: center; */
+  background-color: #fee2e2;
 }
 
 table {
@@ -123,10 +126,12 @@ th {
 
 .sidebar {
   padding: 50px;
-  border-right: black solid 1px;
+  box-shadow: 0px 10px 10px black;
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: #dc2626;
+  z-index: 1;
 }
 
 
